--- a/src/Game.css
+++ b/src/Game.css
@@ -1,10 +1,27 @@
 /* Game.css */
-
+body{
+    background-color: #e0edf4
+}
 .game {
     display: flex;
     flex-direction: column;
     align-items: center;
     margin-top: 20px;
+}
+h3{
+    padding: 0;
+    margin: 0;
+}
+.red{
+    color: red;
+}
+.green{
+    color: green;
+}
+.yourscore{
+    padding-bottom: 10px;
+    font-style: italic;
+    color: royalblue;
 }
 
 .game-info {
@@ -12,6 +29,7 @@
     flex-direction: column;
     align-items: center;
     gap: 10px;
+    
 }
 
 .game-grid {
